--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cooper Joyce – Game Design Portfolio</title>
-  <link rel="stylesheet" href="file:///C|/Users/coope/Desktop/portfolio/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="navbar">
@@ -28,7 +28,7 @@
     </div>
     <div class="hero-video">
   <a href="https://ecu.ap.panopto.com/Panopto/Pages/Viewer.aspx?id=cebe8ac2-7fdf-4141-9bf5-b2ed00c7e6fe" target="_blank">
-    <img src="S30vgQBbTs.jpg" alt="Watch my video pitch" class="video-thumbnail">
+    <img src="file:///C|/Users/coope/Desktop/Portfolio/S30vgQBbTs.jpg" alt="Watch my video pitch" class="video-thumbnail">
   </a>
 </div>
 
