--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <h1>Hi, I'm Cooper Joyce</h1>
       <p>Game Design Student & Designer</p>
       <a href="#projects" class="btn">View My Work</a>
-      <a href="file:///C|/Users/coope/Desktop/portfolio/Cooper_Joyce_Resume.pdf" class="btn" target="_blank" style="margin-left: 1rem;">View Resume</a>
+      <a href="file:///C|/Users/coope/Desktop/portfolio/MyPortfolio\Cooper_Joyce_Resume.pdf" class="btn" target="_blank" style="margin-left: 1rem;">View Resume</a>
     </div>
     <div class="hero-video">
   <a href="https://ecu.ap.panopto.com/Panopto/Pages/Viewer.aspx?id=cebe8ac2-7fdf-4141-9bf5-b2ed00c7e6fe" target="_blank">
-    <img src="file:///C|/Users/coope/Desktop/Portfolio/S30vgQBbTs.jpg" alt="Watch my video pitch" class="video-thumbnail">
+    <img src="file:///C:\Users\coope\Desktop\Portfolio\MyPortfolio\S30vgQBbTs.jpg" alt="Watch my video pitch" class="video-thumbnail">
   </a>
 </div>
 
@@ -49,7 +49,7 @@
   <div class="project">
     <div class="carousel">
       <button class="carousel-btn prev" onclick="changeSlide('design', -1)">&#10094;</button>
-      <img id="carousel-img-design" src="file:///C|/Users/coope/Desktop/portfolio/design1.jpg" alt="Design work">
+      <img id="carousel-img-design" src="file:///C|/Users/coope/Desktop/portfolio/MyPortfolio\design1.jpg" alt="Design work">
       <button class="carousel-btn next" onclick="changeSlide('design', 1)">&#10095;</button>
     </div>
     <div>
@@ -62,7 +62,7 @@
   <div class="project">
     <div class="carousel">
       <button class="carousel-btn prev" onclick="changeSlide('qa', -1)">&#10094;</button>
-      <img id="carousel-img-qa" src="file:///C|/Users/coope/Desktop/portfolio/qa1.jpg" alt="QA work">
+      <img id="carousel-img-qa" src="file:///C|/Users/coope/Desktop/portfolio/MyPortfolio\qa1.jpg" alt="QA work">
       <button class="carousel-btn next" onclick="changeSlide('qa', 1)">&#10095;</button>
     </div>
     <div>
@@ -75,7 +75,7 @@
   <div class="project">
     <div class="carousel">
       <button class="carousel-btn prev" onclick="changeSlide('ux', -1)">&#10094;</button>
-      <img id="carousel-img-ux" src="file:///C|/Users/coope/Desktop/portfolio/ux1.jpg" alt="3D UX work">
+      <img id="carousel-img-ux" src="file:///C|/Users/coope/Desktop/portfolio/MyPortfolio\ux1.jpg" alt="3D UX work">
       <button class="carousel-btn next" onclick="changeSlide('ux', 1)">&#10095;</button>
     </div>
     <div>
