--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <h1>Hi, I'm Cooper Joyce</h1>
         <p>Game Design Student & Designer</p>
         <a href="#projects" class="btn">View My Work</a>
-        <a href="Cooper_Joyce_Resume.pdf" class="btn" target="_blank" style="margin-left: 1rem;">View Resume</a>
+        <a href="img/Cooper_Joyce_Resume.pdf" class="btn" target="_blank" style="margin-left: 1rem;">View Resume</a>
       </div>
       <div class="hero-video">
         <a href="https://ecu.ap.panopto.com/Panopto/Pages/Viewer.aspx?id=cebe8ac2-7fdf-4141-9bf5-b2ed00c7e6fe" target="_blank">
-          <img src="img/video-thumbnail.jpg" alt="Watch my video pitch" class="video-thumbnail">
+          <img src="img/S30vgQBbTs.jpg" alt="Watch my video pitch" class="video-thumbnail">
         </a>
       </div>
     </div>
